--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
+    "email-templates": "^5.0.1",
     "express": "^4.16.4",
+    "handlebars": "^4.0.12",
     "helmet": "^3.14.0",
     "jsonwebtoken": "^8.3.0",
     "nodemailer": "^4.6.8"
